--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Course work of Shanshan Cui</title>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -11,9 +11,8 @@
 	<h4>AVT 415-002 Spring 2023</h4>
 		<div class="column"><h2>Exercises</h2>
 			<ul>
-			<li><a href="https://xd.adobe.com/view/8df154a0-4241-477f-bcfc-da7914c170d7-d8a2/">E1: A Little Background</a></li>
-			<li>E2: Linking and hovering in XD</li>
-			<li></li>
+				<li><a href="https://xd.adobe.com/view/8df154a0-4241-477f-bcfc-da7914c170d7-d8a2/">E1: A Little Background</a></li>
+				<li><a href="https://xd.adobe.com/view/8df154a0-4241-477f-bcfc-da7914c170d7-d8a2/">E2: Linking and hovering in XD</a></li>
 			</ul>
 		</div>
 
