--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<h2>Project</h2>
 			<dl>
 				<dt>Project phase 1</dt>
-			<dd>P.P1.1: Idea</dd>
+				<ul>
+			<li><a href="file:///C:/Users/jessh/Downloads/avt415/avt415/p_process/PP11.html">P.P1.1: Idea</a></dd>
 			<dd></dd>
 			</dl>
 			<dl>
@@ -36,5 +37,6 @@
 			<dd>P.P3.3: Project Portfolio</dd>
 			<dd>P.P3.4: Final Online Store <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a></dd>
 			<dd>Project Portfolio</dd>
+			</ul>
 </body>
 </html>
