--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<dl>
 				<dt>Project phase 1</dt>
 				<ul>
-			<li><a href="file:///C:/Users/jessh/Downloads/avt415/avt415/p_process/PP11.html">P.P1.1: Idea</a></dd>
+			<li><a href="p_process/PP11.html">P.P1.1: Idea</a></dd>
 			<dd></dd>
 			</dl>
 			<dl>
