--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<ul>
 				<li><a href="https://xd.adobe.com/view/8df154a0-4241-477f-bcfc-da7914c170d7-d8a2/">E1: A Little Background</a></li>
 				<li><a href="https://xd.adobe.com/view/8df154a0-4241-477f-bcfc-da7914c170d7-d8a2/">E2: Linking and hovering in XD</a></li>
+				<li><a href="https://xd.adobe.com/view/5c8fcebc-9e14-4f8b-9283-c0501d2df730-09dc/">E3: Design Examples</a></li>
 			</ul>
 		</div>
 
