--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<dt>Project phase 1</dt>
 				<ul>
 			<li><a href="p_process/PP11.html">P.P1.1: Idea</a></dd>
+					<li><a href="https://xd.adobe.com/view/724c9e51-5844-4476-9206-806428958247-271f/">P.P1.2: Competitive Study</a></dd>
 			<dd></dd>
 			</dl>
 			<dl>
