--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<li><a href="p_process/PP11.html">P.P1.1: Idea</a></dd>
 					<li><a href="https://xd.adobe.com/view/724c9e51-5844-4476-9206-806428958247-271f/">P.P1.2: Competitive Study</a></dd>
 					<li><a href="p_process/PP13.html">P.P1.3: User Scenario Mapping</a></dd>
+					<li><a href="https://xd.adobe.com/view/cb547672-a48b-4000-903b-66a03e3cf889-9e07/">P.P1.4: Sitemap & User Flow</a></li>
 			<dd></dd>
 			</dl>
 			<dl>
