--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li><a href="https://xd.adobe.com/view/724c9e51-5844-4476-9206-806428958247-271f/">P.P1.2: Competitive Study</a></dd>
 					<li><a href="p_process/PP13.html">P.P1.3: User Scenario Mapping</a></dd>
 					<li><a href="https://xd.adobe.com/view/cb547672-a48b-4000-903b-66a03e3cf889-9e07/">P.P1.4: Sitemap & User Flow</a></dd>
-					<li>P.P1.5: Wireframe | <a href="https://xd.adobe.com/view/119a907a-1e33-4cd5-b394-c3544f88a9b1-44c9/">Mobile </a></dd>
+					<li>P.P1.5: Wireframe | <a href="https://xd.adobe.com/view/119a907a-1e33-4cd5-b394-c3544f88a9b1-44c9/">Mobile </a>, <a href="https://xd.adobe.com/view/a27e5ff6-c6bf-4a91-9ecc-0310af6cc034-f72d/">Desktop</a></dd>
 			<dd></dd>
 			</dl>
 			<dl>
