--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</dl>
 			<dl>
 				<dt>Project phase 2</dt>
-			<dd>P. P2.1: Brief style guide
+			<dd><a href="https://xd.adobe.com/view/6617a569-5f71-4160-8b08-a1ab12d14ee0-3344/">P.P2.1: Brief Style Guide</a></dd>
 			</dd>
 			<dd>P.P2.2: First draft of homepage at all sizes <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a> </dd>
 			</dl>
