--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<li><a href="https://xd.adobe.com/view/5c8fcebc-9e14-4f8b-9283-c0501d2df730-09dc/">E3: Design Examples</a></li>
 				<li><a href="ex/e4.html">E4: Text Only Layout</a></li>
 				<li><a href="https://xd.adobe.com/view/6e45160d-1fdb-4935-8131-4db89f70a8a4-3b16/">E5: Study on Shopping Cart and Checkout Process</a></li>
+				<li><a href="ex/E6.html">E6: Responsive Footer</a></li>
 			</ul>
 		</div>
 
