--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<dd><a href="https://xd.adobe.com/view/6617a569-5f71-4160-8b08-a1ab12d14ee0-3344/">P.P2.1: Brief Style Guide</a></dd>
 			</dd>
 			<dd>P.P2.2: First draft of homepage at all sizes <a href="https://xd.adobe.com/view/f8ac30ef-dcbe-4679-90a1-9b282e9c78d8-adff/">Desktop</a>, <a href="https://xd.adobe.com/view/222a01b6-f4d1-49fd-91e6-6e20922a25fa-7779/"> Tablet</a>, <a href="https://xd.adobe.com/view/2d444c10-efc5-45b6-8aeb-ad874cd33cd0-7817/"> Mobile</a> </dd>
+			<dd>P.P2.3: First draft of inventory page <a href="https://xd.adobe.com/view/a4c1ae3f-7f60-46bb-a105-b20f79de2fe0-f192/"> Desktop</a>, <a href="https://xd.adobe.com/view/1ae4ad2d-f510-4f41-863d-6764c9c6dcbc-4fb7/"> Tablet</a>, <a href="https://xd.adobe.com/view/1d6231ea-2874-4516-a3a7-378508e85096-4831/"> Mobile</a></dd>
 			</dl>
 			<dl>
 				<dt>Project phase 3</dt>
