--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<dd>P.P2.2: First draft of homepage at all sizes <a href="https://xd.adobe.com/view/f8ac30ef-dcbe-4679-90a1-9b282e9c78d8-adff/">Desktop</a>, <a href="https://xd.adobe.com/view/222a01b6-f4d1-49fd-91e6-6e20922a25fa-7779/"> Tablet</a>, <a href="https://xd.adobe.com/view/2d444c10-efc5-45b6-8aeb-ad874cd33cd0-7817/"> Mobile</a> </dd>
 			<dd>P.P2.3: First draft of inventory page <a href="https://xd.adobe.com/view/a4c1ae3f-7f60-46bb-a105-b20f79de2fe0-f192/"> Desktop</a>, <a href="https://xd.adobe.com/view/1ae4ad2d-f510-4f41-863d-6764c9c6dcbc-4fb7/"> Tablet</a>, <a href="https://xd.adobe.com/view/1d6231ea-2874-4516-a3a7-378508e85096-4831/"> Mobile</a></dd>
 			<dd>P.P2.4: First draft of product page <a href="https://xd.adobe.com/view/663a4356-8d6b-41e7-9432-4d433027936a-3369/">Desktop</a>, <a href="https://xd.adobe.com/view/9858a430-718a-4af0-8e21-bc8632b22690-cd0b/"> Tablet</a>, <a href="https://xd.adobe.com/view/de5d2651-ad9e-46c6-b058-a720ca47bd82-8b0e/"> Mobile</a></dd>
+			<dd>P.P2.5: First draft of returns page <a href="https://xd.adobe.com/view/43705935-a033-4b44-9db8-cbd0af309ad3-1623/">Desktop</a>, <a href="https://xd.adobe.com/view/6e94c712-ca26-40a7-b595-5b6d62a136a9-3bc7/"> Tablet</a>, <a href="https://xd.adobe.com/view/4bd15e80-86ca-4c72-98fb-4b0f38ed5031-1e82/"> Mobile</a></dd>
 			</dl>
 			<dl>
 				<dt>Project phase 3</dt>
