--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<dl>
 				<dt>Project phase 3</dt>
 			<dd>P.P3.1: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/7bbf8b8b-7a44-4911-9d94-e42e50e02c23-2eec/">Desktop </a>size </dd>
-			<dd>P.P3.2: Initial Protoypes for all pages at <a href="#">Mobile</a> and <a href="#">Tablet</a> sizes</dd>
+			<dd>P.P3.2: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/7fcd5ea0-5038-4f5e-99e6-4da88e150030-2a9e/">Mobile</a> and <a href="https://xd.adobe.com/view/cb73f46a-a970-47ed-ae4b-3268ab1caf2f-9e20/">Tablet</a> sizes</dd>
 			<dd>P.P3.3: Project Portfolio</dd>
 			<dd>P.P3.4: Final Online Store <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a></dd>
 			<dd>Project Portfolio</dd>
