--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<dd>P.P3.1: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/7bbf8b8b-7a44-4911-9d94-e42e50e02c23-2eec/">Desktop </a>size </dd>
 			<dd>P.P3.2: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/7fcd5ea0-5038-4f5e-99e6-4da88e150030-2a9e/">Mobile</a> and <a href="https://xd.adobe.com/view/cb73f46a-a970-47ed-ae4b-3268ab1caf2f-9e20/">Tablet</a> sizes</dd>
 			<dd>P.P3.3: Project Portfolio</dd>
-			<dd>P.P3.4: Final Online Store <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a></dd>
-			<dd>Project Portfolio</dd>
+			<dd>P.P3.4: Final Online Store <a href="https://xd.adobe.com/view/7bbf8b8b-7a44-4911-9d94-e42e50e02c23-2eec/">Desktop</a>, <a href="https://xd.adobe.com/view/cb73f46a-a970-47ed-ae4b-3268ab1caf2f-9e20/"> Tablet</a>, <a href="https://xd.adobe.com/view/7fcd5ea0-5038-4f5e-99e6-4da88e150030-2a9e/"> Mobile</a></dd>
+			<dd><a href="https://xd.adobe.com/view/ec08d3d0-d479-4f10-9ea4-e3584b95d5ff-b95b/">Project Portfolio</dd>
 			</ul>
 </body>
 </html>
